--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,15 @@ services:
   db:
     image: mysql:5.6.26
     ports:
-      - "3306:3306"
+      - "3306:3306" # If you want to access it from your machine.
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: root # Use .env file in root to store secrets.
       MYSQL_USER: root
       MYSQL_DATABASE: test
 
   web:
     build: .
-    command: bash -c "bundle exec rails db:migrate && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && ./scripts/wait-for-it.sh db:3306 && bundle exec rails db:migrate && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
     ports:
